# seiright-exercise

./: Dockerfile  README.md  pod.yml  pyproject.toml
.github/workflows/: deploy.yml
infra/: ecr.tf  main.tf  secret-manager.tf
infra/backend/: main.tf  terraform.tfstate
infra/eks/: eks.tf  igw.tf  nat.tf  nodes.tf  routes.tf  subnets.tf  variables.tf  vpc.tf
scripts/: notebook_to_html.bash
seiright/app/: api_models.py  db.json  main.py  security.py  utils.py
seiright/core/: _types.py  assemble.py  llms.py  prompts.py  web_crawler.py
seiright/core/prompts/: properties.yaml  system.txt
seiright/utils/: utils.py
tests/: test_security.py  test_utils.py
